src/test/deca/context/invalid/provided/class26.java
class A {
    int x=5;
    int getX(){
        return this.x;
    }
}
{
    A a = new A();
    int b = a.getX(a.x);
}


